--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
 	compileSdkVersion 25
@@ -35,6 +36,8 @@ dependencies {
 	compile 'com.google.code.gson:gson:2.7'
 	compile 'com.google.android.gms:play-services-appindexing:9.8.0'
 	compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+	compile 'com.jakewharton:butterknife:8.2.0'
+	apt 'com.jakewharton:butterknife-compiler:8.2.0'
 
 	testCompile 'junit:junit:4.12'
 
