--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     android:theme="@style/AppTheme">
 
     <activity
-      android:name=".IntroActivity"
+      android:name=".ui.IntroActivity"
       android:label="@string/app_name"
       android:theme="@style/SplashTheme">
       <intent-filter>
@@ -24,25 +24,25 @@
     </activity>
 
     <activity
-      android:name=".MainActivity"
+      android:name=".ui.MainActivity"
       android:theme="@android:style/Theme.Holo.Light.NoActionBar"
       android:windowSoftInputMode="adjustPan"/>
 
-    <activity android:name=".ChannelDetailActivity">
+    <activity android:name=".ui.channel.ChannelDetailActivity">
       android:windowSoftInputMode="stateAlwaysHidden"
     </activity>
-    <activity android:name=".LevelActivity"></activity>
-    <activity android:name=".PointActivity"></activity>
-    <activity android:name=".RecommendActivity"></activity>
-    <activity android:name=".SettingDetailActivity"></activity>
-    <activity android:name=".WebActivity">
+    <activity android:name=".ui.user.LevelActivity"></activity>
+    <activity android:name=".ui.user.PointActivity"></activity>
+    <activity android:name=".ui.user.RecommendActivity"></activity>
+    <activity android:name=".ui.setting.SettingDetailActivity"></activity>
+    <activity android:name=".ui.advertisement.WebActivity">
       android:windowSoftInputMode="stateAlwaysHidden"
     </activity>
-    <activity android:name=".WithdrawActivity"></activity>
-    <activity android:name=".CouponActivity"></activity>
+    <activity android:name=".ui.store.withdraw.WithdrawActivity"></activity>
+    <activity android:name=".ui.store.coupon.CouponActivity"></activity>
 
     <activity
-      android:name=".CompanyDialog"
+      android:name=".ui.company.CompanyDialog"
       android:theme="@style/Theme.AppCompat.Dialog"/>
   </application>
 
