--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
 	testCompile 'junit:junit:4.12'
 
 	provided 'org.projectlombok:lombok:1.12.6'
+	compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
