--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	compile 'com.google.android.gms:play-services-appindexing:9.8.0'
 	compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 	compile 'com.jakewharton:butterknife:8.2.0'
+	compile group: 'com.google.collections', name: 'google-collections', version:'1.0'
 	apt 'com.jakewharton:butterknife-compiler:8.2.0'
 
 	testCompile 'junit:junit:4.12'
