채널 디테일 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,9 +28,9 @@
       android:theme="@android:style/Theme.Holo.Light.NoActionBar"
       android:windowSoftInputMode="adjustPan"/>
 
-    <activity android:name=".ui.channel.ChannelDetailActivity">
-      android:windowSoftInputMode="stateAlwaysHidden"
-    </activity>
+    <activity
+      android:name=".ui.channel.ChannelDetailActivity"
+      android:windowSoftInputMode="stateAlwaysHidden"/>
     <activity android:name=".ui.user.LevelActivity"></activity>
     <activity android:name=".ui.user.PointActivity"></activity>
     <activity android:name=".ui.user.RecommendActivity"></activity>
@@ -40,6 +40,7 @@
     </activity>
     <activity android:name=".ui.store.withdraw.WithdrawActivity"></activity>
     <activity android:name=".ui.store.coupon.CouponActivity"></activity>
+    <activity android:name=".ui.channel.editorspage.EditorsPageActivity"/>
 
     <activity
       android:name=".ui.company.CompanyDialog"
