--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,17 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
+
     <activity
       android:name=".ui.IntroActivity"
-      android:label="@string/app_name"
-      android:theme="@style/SplashTheme">
+      android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+
     <activity
       android:name=".ui.MainActivity"
       android:theme="@android:style/Theme.Holo.Light.NoActionBar"
@@ -29,7 +30,6 @@
     <activity
       android:name=".ui.channel.ChannelDetailActivity"
       android:windowSoftInputMode="stateAlwaysHidden"/>
-    <activity android:name=".ui.user.LevelActivity"/>
     <activity android:name=".ui.user.PointActivity"/>
     <activity android:name=".ui.user.RecommendActivity"/>
     <activity android:name=".ui.setting.SettingDetailActivity"/>
@@ -40,9 +40,6 @@
     <activity android:name=".ui.store.coupon.CouponActivity"/>
     <activity android:name=".ui.channel.editorspage.EditorsPageActivity"/>
     <activity android:name=".ui.channel.ChannelFilterActivity"/>
-    <activity
-      android:name=".ui.company.CompanyDialog"
-      android:theme="@style/Theme.AppCompat.Dialog"/>
     <activity
       android:name=".ui.company.CompanyActivity"
       android:label="@string/title_activity_company"
