--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,6 @@
 
     <activity
       android:name=".ui.MainActivity"
-      android:theme="@android:style/Theme.Holo.Light.NoActionBar"
       android:windowSoftInputMode="adjustPan"/>
     <activity
       android:name=".ui.channel.ChannelDetailActivity"
@@ -42,8 +41,7 @@
     <activity android:name=".ui.channel.ChannelFilterActivity"/>
     <activity
       android:name=".ui.company.CompanyActivity"
-      android:label="@string/title_activity_company"
-      android:theme="@style/AppTheme.NoActionBar">
+      android:label="@string/title_activity_company">
     </activity>
   </application>
 
