--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 		jcenter()
 	}
 	dependencies {
+		classpath 'com.google.gms:google-services:3.1.0'
 		classpath 'com.android.tools.build:gradle:2.3.3'
 		classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
