--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 
 	compile 'com.google.collections:google-collections:1.0'
 	compile 'com.google.code.gson:gson:2.7'
+	compile 'com.google.firebase:firebase-core:10.0.1'
 	compile 'com.google.firebase:firebase-messaging:10.0.1'
 
 	compile 'com.android.support:appcompat-v7:25.1.1'
