--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,64 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.puzi.puzi">
+    package="com.puzi.puzi">
 
-  <uses-permission android:name="android.permission.INTERNET"/>
-  <uses-permission android:name="android.permission.WAKE_LOCK"/>
-  <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
-  <application
-    android:name=".PuziApplication"
-    android:allowBackup="true"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:roundIcon="@mipmap/ic_launcher"
-    android:supportsRtl="true"
-    android:theme="@style/AppTheme">
+    <application
+        android:name=".PuziApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".ui.IntroActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-    <activity
-      android:name=".ui.IntroActivity"
-      android:label="@string/app_name">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.MainActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".ui.channel.ChannelDetailActivity"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity android:name=".ui.user.PointActivity" />
+        <activity android:name=".ui.user.RecommendActivity" />
+        <activity android:name=".ui.setting.SettingDetailActivity" />
+        <activity android:name=".ui.advertisement.AdvertisementDetailActivity">
+            android:windowSoftInputMode="stateAlwaysHidden"
+        </activity>
+        <activity android:name=".ui.store.withdraw.WithdrawActivity" />
+        <activity android:name=".ui.store.coupon.CouponActivity" />
+        <activity android:name=".ui.channel.editorspage.EditorsPageActivity" />
+        <activity android:name=".ui.channel.ChannelFilterActivity" />
+        <activity
+            android:name=".ui.company.CompanyActivity"
+            android:label="@string/title_activity_company"></activity>
 
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
+        <service android:name=".fcm.FirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service android:name=".fcm.FirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
 
-    <activity
-      android:name=".ui.MainActivity"
-      android:windowSoftInputMode="adjustPan"/>
-    <activity
-      android:name=".ui.channel.ChannelDetailActivity"
-      android:windowSoftInputMode="stateAlwaysHidden"/>
-    <activity android:name=".ui.user.PointActivity"/>
-    <activity android:name=".ui.user.RecommendActivity"/>
-    <activity android:name=".ui.setting.SettingDetailActivity"/>
-    <activity android:name=".ui.advertisement.AdvertisementDetailActivity">
-      android:windowSoftInputMode="stateAlwaysHidden"
-    </activity>
-    <activity android:name=".ui.store.withdraw.WithdrawActivity"/>
-    <activity android:name=".ui.store.coupon.CouponActivity"/>
-    <activity android:name=".ui.channel.editorspage.EditorsPageActivity"/>
-    <activity android:name=".ui.channel.ChannelFilterActivity"/>
-    <activity
-      android:name=".ui.company.CompanyActivity"
-      android:label="@string/title_activity_company">
-    </activity>
-
-    <service
-      android:name=".fcm.FirebaseMessagingService">
-      <intent-filter>
-        <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-      </intent-filter>
-    </service>
-
-    <service
-      android:name=".fcm.FirebaseInstanceIDService">
-      <intent-filter>
-        <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
-      </intent-filter>
-    </service>
-  </application>
+        <activity android:name=".ui.store.PurchaseActivity"></activity>
+    </application>
 
 </manifest>
