--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 	apt 'com.jakewharton:butterknife-compiler:8.2.0'
 	testCompile 'junit:junit:4.12'
 	provided 'org.projectlombok:lombok:1.12.6'
-	compile 'com.android.support:cardview-v7:25.1.1'
+	compile group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
 }
 
 apply plugin: 'com.google.gms.google-services'
