--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ buildscript {
 allprojects {
 	repositories {
 		jcenter()
+		// kakao
+		mavenCentral()
+		maven{ url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
 	}
 }
 
