셋팅 > 차단해제 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,9 @@
     </activity>
     <activity android:name=".ui.store.withdraw.WithdrawActivity"/>
     <activity android:name=".ui.store.coupon.CouponActivity"/>
-    <activity android:name=".ui.store.StoreItemActivity"/>
+    <activity android:name=".ui.store.item.StoreItemActivity"/>
+    <activity android:name=".ui.store.purchase.PurchaseItemActivity"/>
+    PurchaseItemActivity
     <activity android:name=".ui.channel.editorspage.EditorsPageActivity"/>
     <activity android:name=".ui.channel.ChannelFilterActivity"/>
     <activity
