--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
     android:theme="@style/AppTheme">
 
     <activity
+      android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
       android:name=".ui.IntroActivity"
       android:label="@string/app_name">
       <intent-filter>
