--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
     <activity
       android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
-      android:name=".ui.IntroActivity"
+      android:name=".ui.LaunchActivity"
       android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
@@ -26,6 +26,10 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+
+    <activity
+      android:name=".ui.IntroActivity"
+      android:label="@string/app_name"/>
 
     <activity
       android:name=".ui.MainActivity"
