--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.puzi.puzi">
 
-
   <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+  <uses-permission android:name="android.Manifest.permission.READ_PHONE_STATE" />
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.WAKE_LOCK"/>
   <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
@@ -23,32 +23,35 @@
       android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
-
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-
     <activity
       android:name=".ui.IntroActivity"
       android:label="@string/app_name"/>
-
     <activity
       android:name=".ui.MainActivity"
       android:windowSoftInputMode="adjustPan"/>
     <activity
       android:name=".ui.channel.ChannelDetailActivity"
       android:windowSoftInputMode="stateAlwaysHidden"/>
+    <activity android:name=".ui.user.RecommendActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW"/>
+        <data android:host="@string/kakaolink_host"
+              android:scheme="@string/kakao_scheme">
+        </data>
+      </intent-filter>
+    </activity>
     <activity android:name=".ui.user.PointActivity"/>
-    <activity android:name=".ui.user.RecommendActivity"/>
     <activity android:name=".ui.setting.SettingDetailActivity"/>
-    <activity android:name=".ui.advertisement.AdvertisementDetailActivity">
-      android:windowSoftInputMode="stateAlwaysHidden"
+    <activity android:name=".ui.advertisement.AdvertisementDetailActivity"
+      android:windowSoftInputMode="stateAlwaysHidden">
     </activity>
     <activity android:name=".ui.store.withdraw.WithdrawActivity"/>
     <activity android:name=".ui.store.coupon.CouponActivity"/>
     <activity android:name=".ui.store.item.StoreItemActivity"/>
     <activity android:name=".ui.store.purchase.PurchaseItemActivity"/>
-    PurchaseItemActivity
     <activity android:name=".ui.channel.editorspage.EditorsPageActivity"/>
     <activity android:name=".ui.channel.ChannelFilterActivity"/>
     <activity
