푸지스토어추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,9 @@
     <activity android:name=".ui.store.item.StoreItemActivity"/>
     <activity android:name=".ui.store.puzi.StoreItemActivity"/>
     <activity android:name=".ui.store.puzi.challenge.StoreChallengeActivity"/>
+    <activity android:name=".ui.store.puzi.challenge.StoreChallengeDetailActivity"/>
     <activity android:name=".ui.store.puzi.saving.StoreSavingActivity"/>
+    <activity android:name=".ui.store.puzi.saving.StoreSavingDetailActivity"/>
     <activity android:name=".ui.store.purchase.PurchaseItemActivity"/>
     <activity android:name=".ui.channel.editorspage.EditorsPageActivity"/>
     <activity android:name=".ui.channel.ChannelFilterActivity"/>
