이벤트 적용 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,8 @@
     <activity android:name=".ui.channel.editorspage.EditorsPageActivity"/>
     <activity android:name=".ui.channel.ChannelFilterActivity"/>
     <activity android:name=".ui.myworry.MyWorryWriteActivity"/>
+    <activity android:name=".ui.user.EventWebViewActivity"/>
+
     <activity
       android:name=".ui.company.CompanyActivity"
       android:label="@string/title_activity_company">
