--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,11 @@
       android:excludeFromRecents="true"
       android:taskAffinity="com.puzi.puzi.popup"/>
     <activity
+      android:name=".ui.fcm.ScreenOnAlertActivity"
+      android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
+      android:excludeFromRecents="true"
+      android:taskAffinity="com.puzi.puzi.popup"/>
+    <activity
       android:name=".ui.company.CompanyActivity"
       android:label="@string/title_activity_company">
     </activity>
