--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
 		release {
 			keyAlias 'puzi'
 			keyPassword 'zotm32#@'
-			storeFile file('/Users/juhyun/Documents/puzi/keystore')
-			storePassword 'zotm32#@'
+			storeFile file('/Users/juhyun/Documents/puzi/release.puzi')
+			storePassword 'android'
 		}
 	}
 	compileSdkVersion 25
@@ -16,7 +16,7 @@ android {
 		applicationId 'kr.puzi.puzi'
 		minSdkVersion 16
 		targetSdkVersion 25
-		versionCode 1
+		versionCode 2
 		versionName "1.0.0"
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 	}
