--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,6 +110,8 @@
       android:name="com.kakao.sdk.AppKey"
       android:value="@string/kakao_app_key"/>
 
+    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+
   </application>
 
 </manifest>
