--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
 		versionCode 22
 		versionName "1.0.13"
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+		multiDexEnabled true
 	}
 	buildTypes {
 		release {
@@ -38,7 +39,7 @@ dependencies {
 	androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
 		exclude group: 'com.android.support', module: 'support-annotations'
 	})
-	compile 'com.google.android.gms:play-services-analytics:10.0.1'
+	compile 'com.google.android.gms:play-services-analytics:10.2.1'
 	compile 'com.google.collections:google-collections:1.0'
 	compile 'com.google.code.gson:gson:2.7'
 	compile 'com.google.firebase:firebase-core:10.2.1'
