--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
   <uses-permission android:name="android.permission.WAKE_LOCK"/>
   <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
   <uses-permission android:name="android.permission.VIBRATE" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <uses-permission android:name="com.google.android.finsky.permission.BIND_GET_INSTALL_REFERRER_SERVICE"/>
 
   <application
     android:name="kr.puzi.puzi.PuziApplication"
@@ -106,11 +108,20 @@
       </intent-filter>
     </receiver>
 
+    <receiver android:name="com.igaworks.IgawReceiver" android:exported="true">
+      <intent-filter>
+        <action android:name="com.android.vending.INSTALL_REFERRER"/>
+      </intent-filter>
+    </receiver>
+
     <meta-data
       android:name="com.kakao.sdk.AppKey"
       android:value="@string/kakao_app_key"/>
 
     <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+
+    <meta-data android:name="igaworks_app_key" android:value="88639142" />
+    <meta-data android:name="igaworks_hash_key" android:value="629639edd6894949" />
 
   </application>
 
