테마 클래스 및 UI 생성

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.iml
 .gradle
+*.class
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
@@ -7,4 +8,4 @@
 /build
 /captures
 .externalNativeBuild
-FixValues.class
+FixValues.java
