--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ allprojects {
 		maven {
 			url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/'
 		}
+		maven {
+			url 'https://jitpack.io'
+		}
 	}
 }
 
